// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderTableCell matches snapshot 1`] = `
<th>
  Cell Content 1
</th>
`;

exports[`renderTableCell matches snapshot 2`] = `
<td>
  Cell Content 1
</td>
`;

exports[`renderTableRow matches snapshot 1`] = `
<table>
  <thead>
    <tr
      title="Table Row Title"
    >
      <th>
        Item 1
      </th>
      <th>
        Item 2
      </th>
      <th>
        Item 3
      </th>
    </tr>
  </thead>
</table>
`;

exports[`renderTableRow matches snapshot 2`] = `
<table>
  <thead>
    <tr
      title="Table Row Title"
    >
      <td>
        Item 1
      </td>
      <td>
        Item 2
      </td>
      <td>
        Item 3
      </td>
    </tr>
  </thead>
</table>
`;

exports[`table matches snapshot 1`] = `
<table>
  <thead
    title="Header"
  >
    <tr
      title="Header"
    >
      <th>
        Head 1
      </th>
    </tr>
  </thead>
  <tbody
    title="Body Title"
  >
    <tr
      title="Body Row 1"
    >
      <td>
        Table Element 1
      </td>
    </tr>
  </tbody>
</table>
`;
